--- a/Metas.API/Properties/launchSettings.json
+++ b/Metas.API/Properties/launchSettings.json
@@ -12,7 +12,6 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +19,7 @@
     "Metas.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:8080",
+      "applicationUrl": "https://meta-project-backend-dev.gerdau.digital/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
