--- a/Metas.API/appsettings.Development.json
+++ b/Metas.API/appsettings.Development.json
@@ -5,5 +5,16 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+    //,
+    //"ConnectionString": {
+    //  "dev": "DataSource=dev-metas-system-management-database.c3vcojkjp9yx.us-east-1.rds.amazonaws.com; InitialCatalog=bMetas",
+    //  "builder.UserID" "=",
+    //  "admin" ";",
+    //  "builder.Password" "=",
+    //  "GHWFV8HB0oViP1FbEPhl" ";",
+    //  "builder.InitialCatalog" "=",
+    //  "bMetas" ";"
+
+    }
   }
-}
+ 
