Criaçao da controler Metas e configuração pacote FasReport

--- a/Metas.API/Metas.API.csproj
+++ b/Metas.API/Metas.API.csproj
@@ -7,6 +7,10 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.4.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="FastReport.OpenSource" Version="2023.1.6" />
+    <PackageReference Include="FastReport.OpenSource.Data.MsSql" Version="2021.4.0" />
+    <PackageReference Include="FastReport.OpenSource.Export.PdfSimple" Version="2023.1.6" />
+    <PackageReference Include="FastReport.OpenSource.Web" Version="2023.1.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
