--- a/Metas.API/appsettings.Development.json
+++ b/Metas.API/appsettings.Development.json
@@ -5,10 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-    //,
-    //"ConnectionString": {
-    //  "dev": "DataSource=dev-metas-system-management-database.c3vcojkjp9yx.us-east-1.rds.amazonaws.com; InitialCatalog=bMetas;UserID=admin,Password=GHWFV8HB0oViP1FbEPhl"
-    //}
+    ,
+    "ConnectionString": {
+     "dev": "DataSource=dev-metas-system-management-database.c3vcojkjp9yx.us-east-1.rds.amazonaws.com; InitialCatalog=bMetas;UserID=admin,Password=GHWFV8HB0oViP1FbEPhl"
+    }
   }
 }
  
