Teste Caminho Api Metas

--- a/Metas.API/appsettings.json
+++ b/Metas.API/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=dev-metas-system-management-database.c3vcojkjp9yx.us-east-1.rds.amazonaws.com;AttachDbFilename=;Initial Catalog=bMetas;Integrated Security=False;Persist Security Info=True;User ID=admin;Password=GHWFV8HB0oViP1FbEPhl"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Data Source=dev-metas-system-management-database.c3vcojkjp9yx.us-east-1.rds.amazonaws.com;AttachDbFilename=;Initial Catalog=bMetas;Integrated Security=False;Persist Security Info=True;User ID=admin;Password=GHWFV8HB0oViP1FbEPhl"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
