--- a/Metas.API/Metas.API.csproj
+++ b/Metas.API/Metas.API.csproj
@@ -40,5 +40,7 @@
     
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://appliedengdesign.github.io/cnccodes-json-schema/draft/2022-07/schema" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
